Minor fix to image rendering to avoid box border, improved text visibility below image

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -23,3 +23,8 @@ body {
   margin-top: 35%;
 }
 
+#imageText {
+  font-size: large;
+  font-weight: bold;
+  text-shadow: 0px 0px 4px white;
+}
